--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.14",
     "multer": "^1.4.2",
+    "sharp": "^0.26.3",
     "validator": "^13.1.17"
   },
   "devDependencies": {
